--- a/blogspot.html
+++ b/blogspot.html
@@ -8,7 +8,11 @@
     <title>Blog</title>
 </head>
 <body>
-    <h1>Aquí vamos a hacer un blog post</h1>
-    <p>Y este es el párrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es mi título</h1>
+            <p>En este post hablaremos de las ramas en Git.</p>
+        </div>
+    </div>
 </body>
 </html>
