--- a/blogspot.html
+++ b/blogspot.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id=""cabecera>
+            Cabecera
+        </div>
         <div id="post">
             <h1>Este es mi título</h1>
             <p>En este post hablaremos de las ramas en Git.</p>
