--- a/blogspot.html
+++ b/blogspot.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="container">
-        <div id=""cabecera>
-            Cabecera
+        <div id="cabecera">
+            Hyperblog <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
             <h1>Este es mi título</h1>
