Agregado el contenido adicional del blog y cambio de tipografía por Courier

--- a/blogspot.html
+++ b/blogspot.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Este es mi título</h1>
             <p>En este post hablaremos de las ramas en Git.</p>
+            <p>Los blog son una buena forma de compartir información e ideas en la web.</p>
         </div>
     </div>
 </body>
