--- a/blogspot.html
+++ b/blogspot.html
@@ -10,12 +10,13 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog <span id="tagline">Tu blog de confianza</span>
+            Hyperblog <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Este es mi título</h1>
             <p>En este post hablaremos de las ramas en Git.</p>
             <p>Los blog son una buena forma de compartir información e ideas en la web.</p>
+            <p>Suscríbete y dale like.</p>
         </div>
     </div>
 </body>
