--- a/blogspot.html
+++ b/blogspot.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width= , initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
-    <title>Blog</title>
+    <title>Bienvenidos a Hyperblog</title>
 </head>
 <body>
     <div id="container">
